--- a/notebooks/analise_dados.ipynb
+++ b/notebooks/analise_dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "e8eb0f44",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "id": "bb648571",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "4         NaN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "id": "e0500af0",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "4         NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "id": "bf6f9ee5",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
        "4         NaN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "id": "3fa83f97",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "4  1980.05      5.702721"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "id": "7df46181",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "4  2012.05                  7.6"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "id": "b95bbe7c",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "4  1990.05          0.8"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "id": "b06dde06",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
        "1980-05-01      5.702721"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "id": "eef55497",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
        "1990-05-01          0.8"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "id": "76c43e2f",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,7 @@
        "2012-05-01                  7.6"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "id": "9eb38ae3",
    "metadata": {},
    "outputs": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "id": "81fc7b49",
    "metadata": {},
    "outputs": [],
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "id": "42cb2e30",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        "<Axes: xlabel='Data'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 59,
    "id": "8d5f04de",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "<Axes: xlabel='Data'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "id": "134d052f",
    "metadata": {},
    "outputs": [
@@ -961,7 +961,7 @@
        "<Axes: xlabel='Data'>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "id": "51457d7b",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1108,7 @@
        "[161 rows x 3 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "id": "0b0a2bd7",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
        "<Axes: xlabel='Data'>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1155,6 +1155,106 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "46c093c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IPCA</th>\n",
+       "      <th>PIB</th>\n",
+       "      <th>Desocupacao</th>\n",
+       "      <th>Ano</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Data</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2012-01-01</th>\n",
+       "      <td>0.552174</td>\n",
+       "      <td>0.000055</td>\n",
+       "      <td>0.268817</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-01-01</th>\n",
+       "      <td>0.539130</td>\n",
+       "      <td>0.079549</td>\n",
+       "      <td>0.129032</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-02-01</th>\n",
+       "      <td>0.491304</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.215054</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-03-01</th>\n",
+       "      <td>0.386957</td>\n",
+       "      <td>0.037011</td>\n",
+       "      <td>0.193548</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-04-01</th>\n",
+       "      <td>0.573913</td>\n",
+       "      <td>0.020954</td>\n",
+       "      <td>0.204301</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                IPCA       PIB  Desocupacao   Ano\n",
+       "Data                                             \n",
+       "2012-01-01  0.552174  0.000055     0.268817  2012\n",
+       "2012-01-01  0.539130  0.079549     0.129032  2012\n",
+       "2012-02-01  0.491304  0.000000     0.215054  2012\n",
+       "2012-03-01  0.386957  0.037011     0.193548  2012\n",
+       "2012-04-01  0.573913  0.020954     0.204301  2012"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_normalizado['Ano'] = df.index.year\n",
+    "df_normalizado.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1efa9e5e",
    "metadata": {},
@@ -1164,12 +1264,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "d7df9f3d",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_normalizado.to_parquet('dados_normalizados.parquet')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4f4fb1e",
+   "metadata": {},
+   "source": [
+    "## Lendo do repositório"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "2fd77e2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IPCA</th>\n",
+       "      <th>PIB</th>\n",
+       "      <th>Desocupacao</th>\n",
+       "      <th>Ano</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Data</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2012-01-01</th>\n",
+       "      <td>0.552174</td>\n",
+       "      <td>0.000055</td>\n",
+       "      <td>0.268817</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-01-01</th>\n",
+       "      <td>0.539130</td>\n",
+       "      <td>0.079549</td>\n",
+       "      <td>0.129032</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-02-01</th>\n",
+       "      <td>0.491304</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.215054</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-03-01</th>\n",
+       "      <td>0.386957</td>\n",
+       "      <td>0.037011</td>\n",
+       "      <td>0.193548</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-04-01</th>\n",
+       "      <td>0.573913</td>\n",
+       "      <td>0.020954</td>\n",
+       "      <td>0.204301</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-05-01</th>\n",
+       "      <td>0.452174</td>\n",
+       "      <td>0.047453</td>\n",
+       "      <td>0.182796</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-06-01</th>\n",
+       "      <td>0.330435</td>\n",
+       "      <td>0.045207</td>\n",
+       "      <td>0.161290</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-07-01</th>\n",
+       "      <td>0.482609</td>\n",
+       "      <td>0.068003</td>\n",
+       "      <td>0.182796</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-08-01</th>\n",
+       "      <td>0.473913</td>\n",
+       "      <td>0.075585</td>\n",
+       "      <td>0.129032</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-09-01</th>\n",
+       "      <td>0.543478</td>\n",
+       "      <td>0.037768</td>\n",
+       "      <td>0.086021</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-11-01</th>\n",
+       "      <td>0.556522</td>\n",
+       "      <td>0.081190</td>\n",
+       "      <td>0.086021</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2012-12-01</th>\n",
+       "      <td>0.639130</td>\n",
+       "      <td>0.080300</td>\n",
+       "      <td>0.118280</td>\n",
+       "      <td>2012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>0.543478</td>\n",
+       "      <td>0.141896</td>\n",
+       "      <td>0.236559</td>\n",
+       "      <td>2013</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                IPCA       PIB  Desocupacao   Ano\n",
+       "Data                                             \n",
+       "2012-01-01  0.552174  0.000055     0.268817  2012\n",
+       "2012-01-01  0.539130  0.079549     0.129032  2012\n",
+       "2012-02-01  0.491304  0.000000     0.215054  2012\n",
+       "2012-03-01  0.386957  0.037011     0.193548  2012\n",
+       "2012-04-01  0.573913  0.020954     0.204301  2012\n",
+       "2012-05-01  0.452174  0.047453     0.182796  2012\n",
+       "2012-06-01  0.330435  0.045207     0.161290  2012\n",
+       "2012-07-01  0.482609  0.068003     0.182796  2012\n",
+       "2012-08-01  0.473913  0.075585     0.129032  2012\n",
+       "2012-09-01  0.543478  0.037768     0.086021  2012\n",
+       "2012-11-01  0.556522  0.081190     0.086021  2012\n",
+       "2012-12-01  0.639130  0.080300     0.118280  2012\n",
+       "2013-01-01  0.543478  0.141896     0.236559  2013"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_leitura = pd.read_parquet(\"https://github.com/avellar1975/imersao_alura/blob/main/notebooks/dados_normalizados.parquet?raw=true\")\n",
+    "df_leitura.head(13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "c6abbcd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 161 entries, 2012-01-01 to 2025-05-01\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   IPCA         161 non-null    float64\n",
+      " 1   PIB          161 non-null    float64\n",
+      " 2   Desocupacao  161 non-null    float64\n",
+      " 3   Ano          161 non-null    int32  \n",
+      "dtypes: float64(3), int32(1)\n",
+      "memory usage: 5.7 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_leitura.info()"
    ]
   }
  ],
